@@ -4,7 +4,13 @@ import cart.domain.cartitem.CartItem;
 import cart.domain.cartitem.CartItems;
 import cart.domain.member.Member;
 import cart.domain.order.Order;
+import cart.domain.order.OrderProduct;
 import cart.domain.order.UsedPoint;
+import cart.domain.product.Product;
+import cart.repository.datajpa.CartItemDataJpaRepository;
+import cart.repository.datajpa.MemberDataJpaRepository;
+import cart.repository.datajpa.OrderDataJpaRepository;
+import cart.repository.datajpa.ProductDataJpaRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -13,6 +19,7 @@ import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.transaction.annotation.Transactional;
 
 import javax.persistence.EntityManager;
+import java.util.Arrays;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -23,29 +30,34 @@ import static org.junit.jupiter.api.Assertions.assertAll;
 class OrderRepositoryTest {
 
     @Autowired
-    private OrderRepository orderRepository;
+    private MemberDataJpaRepository memberRepository;
     @Autowired
-    private CartItemRepository cartItemRepository;
+    private CartItemDataJpaRepository cartItemRepository;
     @Autowired
-    private MemberRepository memberRepository;
+    private ProductDataJpaRepository productRepository;
+    @Autowired
+    private OrderDataJpaRepository orderRepository;
     @Autowired
     private EntityManager em;
 
     private Member member;
-    CartItem cartItem1;
-    CartItem cartItem2;
+    private CartItem cartItem1;
+    private CartItem cartItem2;
     private CartItems cartItems;
-    private Order order;
+    private Order order1;
 
     @BeforeEach
     void setUp() {
         // given
-        member = memberRepository.findOne(1L);
-        cartItem1 = cartItemRepository.findOne(3L);
-        cartItem2 = cartItemRepository.findOne(4L);
+        member = memberRepository.findById(1L).orElseThrow();
+        cartItem1 = cartItemRepository.findById(3L).orElseThrow();
+        cartItem2 = cartItemRepository.findById(4L).orElseThrow();
         cartItems = new CartItems(List.of(cartItem1, cartItem2));
-        final Long orderId = orderRepository.save(cartItems, member, new UsedPoint(1_000));
-        order = em.find(Order.class, orderId);
+        final Order order = new Order(member, new UsedPoint(1_000), cartItems.getSavedPoint(), cartItems.getDeliveryFee());
+        final List<Product> products = productRepository.findAllById(cartItems.getProductIds());
+        final List<OrderProduct> orderProducts = cartItems.toOrderProducts(order, products);
+        order.updateOrderProduct(orderProducts);
+        this.order1 = orderRepository.save(order);
     }
 
     @DisplayName("주문을 저장하고 조회한다.")
@@ -53,10 +65,10 @@ class OrderRepositoryTest {
     void saveAndFind() {
         // when, then
         assertAll(
-                () -> assertThat(order.getMember()).isEqualTo(member),
-                () -> assertThat(order.getUsedPoint()).isEqualTo(new UsedPoint(1_000)),
-                () -> assertThat(order.getSavedPoint()).isEqualTo(cartItems.getSavedPoint()),
-                () -> assertThat(order.getDeliveryFee()).isEqualTo(cartItems.getDeliveryFee())
+                () -> assertThat(order1.getMember()).isEqualTo(member),
+                () -> assertThat(order1.getUsedPoint()).isEqualTo(new UsedPoint(1_000)),
+                () -> assertThat(order1.getSavedPoint()).isEqualTo(cartItems.getSavedPoint()),
+                () -> assertThat(order1.getDeliveryFee()).isEqualTo(cartItems.getDeliveryFee())
         );
     }
 
@@ -64,13 +76,17 @@ class OrderRepositoryTest {
     @Test
     void findAllByOrderIds() {
         // given
-        final CartItem cartItem3 = cartItemRepository.findOne(5L);
-        final CartItem cartItem4 = cartItemRepository.findOne(6L);
+        final CartItem cartItem3 = cartItemRepository.findById(5L).orElseThrow();
+        final CartItem cartItem4 = cartItemRepository.findById(6L).orElseThrow();
         final CartItems cartItems2 = new CartItems(List.of(cartItem3, cartItem4));
-        final Long orderId2 = orderRepository.save(cartItems2, member, new UsedPoint(0));
+        final Order order2 = new Order(member, new UsedPoint(0), cartItems2.getSavedPoint(), cartItems2.getDeliveryFee());
+        final List<Product> products = productRepository.findAllById(cartItems.getProductIds());
+        final List<OrderProduct> orderProducts = cartItems.toOrderProducts(order2, products);
+        order2.updateOrderProduct(orderProducts);
+        orderRepository.save(order2);
 
         // when
-        final List<Order> orders = orderRepository.findAllByOrderIds(List.of(1L, order.getId(), orderId2));
+        final List<Order> orders = orderRepository.findAllById(Arrays.asList(1L, order1.getId(), order2.getId()));
 
         // then
         assertAll(
@@ -99,7 +115,7 @@ class OrderRepositoryTest {
         final int orderSize = orders.size();
 
         // when
-        orderRepository.deleteAll(List.of(order));
+        orderRepository.deleteAll(List.of(order1));
 
         List<Order> deletedOrders = orderRepository.findAllByMemberId(member.getId());
         final int deletedOrderSize = deletedOrders.size();
